# myownradio

./: Makefile  WIKI-SETUP.md  docker-compose.yml  setup-wiki.sh
.github/workflows/: build-radiomanager-mobile-fe.yml  test-radiomanager-mobile-fe.yml
docs/: angularjs-ui.md  api.md  architecture.md  data-model.md  glossary.md  index.md  media-playback.md  open-questions.md  route-inventory.md  routing.md  runtime-configuration.md  security.md  spec.md
images/migration/: Dockerfile
migrations/: 20250522100000_get_rid_of_promo_codes.down.sql  20250522100000_get_rid_of_promo_codes.up.sql
services/backend/: API.md  Dockerfile  composer.json  package-lock.json  package.json
services/backend/spec/: project-spec.md  routing-handlers.md
services/radio-manager-backend/: Cargo.toml
services/radiomanager-frontend/: package-lock.json  package.json
services/radiomanager-mobile-fe/: Dockerfile  package-lock.json  package.json
services/radiomanager-pubsub-backend/: package-lock.json  package.json
services/radiomanager-web-egress-controller/: Cargo.toml  Dockerfile
services/radiomanager-web-egress-process/: Cargo.toml
services/radioterio-legacy-frontend/: AGENTS.md  legacy-jsx.d.ts  package-lock.json  package.json
services/radioterio-legacy-frontend/.storybook/: main.ts  preview.ts
services/radioterio-legacy-frontend/app/: globals.css  layout.tsx  page.tsx
services/radioterio-legacy-frontend/docs/: component-tree.md  components-map.md  migration-plan.md
services/rust/crates/audio-composer/: .env.example  Cargo.toml  README.md
services/rust/crates/audio-composer/src/: composer.rs  config.rs  constants.rs  ffmpeg.rs  http.rs  main.rs  running_time.rs
services/rust/crates/mor-api-gateway/: .env.example  Cargo.toml  README.md
services/rust/crates/mor-api-gateway/docs/: MODELS.md
services/rust/crates/mor-api-gateway/src/: app.rs  builder.rs  config.rs  main.rs  response.rs
services/rust/crates/mor-api-gateway/src/auth/: legacy.rs
services/rust/crates/mor-api-gateway/src/db/: mod.rs  pool.rs  schema.rs
services/rust/crates/mor-api-gateway/src/db/channel_tracks/: model.rs  queries.rs
services/rust/crates/mor-api-gateway/src/db/channels/: mod.rs  model.rs  queries.rs
services/rust/crates/mor-api-gateway/src/db/files/: model.rs
services/rust/crates/mor-api-gateway/src/db/sessions/: model.rs  queries.rs
services/rust/crates/mor-api-gateway/src/db/tracks/: mod.rs  model.rs  queries.rs
services/rust/crates/mor-api-gateway/src/db/users/: model.rs  queries.rs
services/rust/crates/mor-api-gateway/src/entities/: channel.rs  stream.rs
services/rust/crates/mor-api-gateway/src/router/: channel_tracks.rs  channels.rs  files.rs  mod.rs  users.rs
services/rust/crates/mor-api-gateway/src/router/auth/: auth.rs  mod.rs
services/rust/crates/mor-api-gateway/src/router/me/: channels.rs  mod.rs  profile.rs  tracks.rs
services/rust/crates/mor-api-gateway/src/router/public/: categories.rs  channels.rs  mod.rs  schedule.rs
services/rust/crates/mor-api-gateway/src/routes/: channel_tracks.rs  mod.rs  tracks.rs  user_channels.rs  users.rs
(+69 files in other folders)
