[package]
name = "radiomanager-web-egress-controller"
version = "1.0.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = { version = "2.0.12" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.20" }
envy = { version = "0.4.2" }
serde = { version = "1.0.181", features = ["derive"] }
actix-rt = { version = "2.8.0" }
actix-web = { version = "4.3.1" }
actix-server = { version = "2.2.0" }
futures = { version = "0.3.31" }
kube = { version = "1.1.0" }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
either = "1.15.0"
