[package]
name = "audio-composer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
envy = { version = "0.4.2" }
actix-rt = { version = "2.10.0" }
actix-web = { version = "4.10.2" }
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
futures = { version = "0.3.31" }
bytes = { version = "1.11.1" }
tracing = { version = "0.1.41" }
async-process = { version = "2.3.0" }
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
scheduler-client = { path = "../scheduler-client" }
